
# (C) Copyright 2017-2022 UCAR
#
# This software is licensed under the terms of the Apache Licence Version 2.0
# which can be obtained at http://www.apache.org/licenses/LICENSE-2.0.

#
# CRTM_coef bundle
#

add_subdirectory( Assemble_ODAS )
add_subdirectory( ODAS_Regress )
add_subdirectory( ODAS_NC2BIN ) 
